--- a/LAB-WORK/Lab task3.html
+++ b/LAB-WORK/Lab task3.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <b><i><u>italic</u></i></b>
+    <b><i><u>italic</u></i></b><br>
 
     sdfsd
     <marquee direction="down">
@@ -38,7 +38,7 @@ Paragraphs can contain many different kinds of information. A paragraph could co
 
     <pre>
             hello
-        this is <HTML:5></HTML:5>
+        this is 
     </pre>
 
     <b>bold</b>
