--- a/LAB-WORK/form1.html
+++ b/LAB-WORK/form1.html
@@ -39,11 +39,11 @@
                 <td colspan="2">
                     <dl>
                 <ul><li><dt>How satisfied were you with our service?</dt></li></ul>
-                        <dd>Very satisfied<input type="radio"></dd>
-                        <dd>Satisfied<input type="radio"></dd>
-                        <dd>Didn't care<input type="radio"></dd>
-                        <dd>Dissatisfied<input type="radio"></dd>
-                        <dd>Very dissatisfied<input type="radio"></li>
+                        <dd>Very satisfied<input type="radio" name="x"></dd>
+                        <dd>Satisfied<input type="radio" name="x"></dd>
+                        <dd>Didn't care<input type="radio" name="x"></dd>
+                        <dd>Dissatisfied<input type="radio" name="x"></dd>
+                        <dd>Very dissatisfied<input type="radio" name="x"></li>
                     </dl>
                 </td>
             </tr>
