--- a/LAB-WORK/form2.html
+++ b/LAB-WORK/form2.html
@@ -21,7 +21,7 @@
 
             <tr>
                 <td>email:</td>
-                <td><input type="text"></td>
+                <td><input type="email"></td>
             </tr>
 
             <tr>
