--- a/LAB-WORK/audio-video/audio-video.html
+++ b/LAB-WORK/audio-video/audio-video.html
@@ -9,7 +9,7 @@
 <body>
     <audio controls loop src="Tere Vaaste(PagalWorld.com.se).mp3"></audio>
 
-    <video controls src="हिंदी Oggy and the Cockroaches 😖 ऑगी और हेलीकाप्टर 🚁 Hindi Cartoons for Kids.mp4"></video>
+    <video controls src="https://www.youtube.com/embed/FB3FL-RiKNo" autoplay></video>
 
     <embed src="https://www.youtube.com/embed/ZcIQ7xkFxd8">
 
@@ -18,5 +18,6 @@
           allowfullscreen="" loading="lazy"
            referrerpolicy="no-referrer-when-downgrade">
         </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/p9pTU3G0iWw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
