--- a/TASKS/icon.html
+++ b/TASKS/icon.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         .b
         { display: inline-block;
@@ -44,10 +45,10 @@
 </head>
 <body>
     <footer>
-        <span class="b"><i class="fa fa-truck" aria-hidden="true" ></i> </span>
-         <span class="b"><b><i class="fa fa-shopping-bag" aria-hidden="true"></i></b></span>
-         <span class="b"> <b><i class="fa fa-headphones" aria-hidden="true"></i></b></span> 
-         <span class="b"><b><i class="fa fa-gift" aria-hidden="true"></i></b> </span>
+        <span class="b"><i class="fa-solid fa-umbrella" aria-hidden="true"></i> </span>
+         <span class="b"><b><i class="fa-solid fa-eye" aria-hidden="true"></i></b></span>
+         <span class="b"> <b><i class="fa-solid fa-ghost" aria-hidden="true"></i></b></span> 
+         <span class="b"><b><i class="fa-solid fa-music" aria-hidden="true"></i></i></b> </span>
      </footer>
 
 </body>
