--- a/TASKS/navbar-task.html
+++ b/TASKS/navbar-task.html
@@ -14,13 +14,14 @@
         }
         a{
             text-decoration: none;
-            color: black;
+            color: white;
            
 
         }
       ul{
         display: flex; 
         justify-content: center;
+        background: black;
         
       }
 
