--- a/LAB-WORK/row-col.html
+++ b/LAB-WORK/row-col.html
@@ -7,7 +7,7 @@
     <style>
         .row 
         {
-            /* height: 300px; */
+            height: 300px;
             background: lightblue;
             display: flex;
         }
@@ -20,7 +20,7 @@
 
         .row1 
         {
-            /* display: flex; */
+            display: flex;
             background-color: coral;
         }
         .col2
@@ -44,7 +44,7 @@
         .col1 
         {
             width: 40%;
-            background: gray;
+            background: rgb(246, 96, 96);
             float: left;
         }
 
@@ -56,19 +56,20 @@
         }
         .prd 
         {
-            /* height: 200px;
-            width: 200px; */
+            height: 200px;
+            width: 200px;
             height: 100px;
             width: 25%;
             border: 2px solid #fff;
         }
-        .bg 
+        .img 
         {
-            background: url(Chhota_Bheem.webp);
+            background: url(https://wallpaperaccess.com/full/2319696.jpg);
             background-size: 100% 100%;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
+            background-size: contain; 
+            background-repeat: no-repeat; 
+            background-position: center; 
+            
         }
        img 
         {
@@ -77,9 +78,9 @@
     </style>
 </head>
 <body>
-     <!-- <div class="row">
-        <div class="col">col 1</div>
-        <div class="col">col 2</div>
+     <div class="row">
+        <div class="col">col1</div>
+        <div class="col">col2</div>
     </div>
 
     <div class="row1">
@@ -87,15 +88,15 @@
         <div class="col2">col 2</div>
         <div class="col3">col 3</div>
         <div class="col4">col 4</div>
-    </div> -->
+    </div>
 
     <div class="card">
         <div class="prd">
-            <img src="Chhota_Bheem.webp" alt="" height="100%" width="100%">
+            <img src="https://wallpaperaccess.com/full/2319696.jpg" alt="" height="100%" width="100%">
         </div>
-        <div class="prd">Product 1</div>
-        <div class="prd bg">Product 1</div>
-        <div class="prd">Product 1</div>
+        <div class="prd">Pro1</div>
+        <div class="prd">Pro1</div>
+        <div class="prd img">Pro1</div>
     </div>
 
 </body>
