--- a/projects/project/flex-media/index.html
+++ b/projects/project/flex-media/index.html
@@ -177,7 +177,7 @@
                                 <ul>
                                     <li><a href="#"  class="bag"><i class="fa-solid fa-bag-shopping"></i></a></li>
                                     <li><a href="#">+Quick View</a></li>
-                                    <li> <a href="#"><i class="fa-solid fa-arrow-trend-up"></i></a></li>
+                                    <li> <a href="#"><i class="fa-solid fa-shuffle"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                                 <ul>
                                     <li><a href="#"  class="bag"><i class="fa-solid fa-bag-shopping"></i></a></li>
                                     <li><a href="#">+Quick View</a></li>
-                                    <li> <a href="#"><i class="fa-solid fa-arrow-trend-up"></i></a></li>
+                                    <li> <a href="#"><i class="fa-solid fa-shuffle"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                 <ul>
                                     <li><a href="#"  class="bag"><i class="fa-solid fa-bag-shopping"></i></a></li>
                                     <li><a href="#">+Quick View</a></li>
-                                    <li> <a href="#"><i class="fa-solid fa-arrow-trend-up"></i></a></li>
+                                    <li> <a href="#"><i class="fa-solid fa-shuffle"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -286,7 +286,7 @@
                                 <ul>
                                     <li><a href="#"  class="bag"><i class="fa-solid fa-bag-shopping"></i></a></li>
                                     <li><a href="#">+Quick View</a></li>
-                                    <li> <a href="#"><i class="fa-solid fa-arrow-trend-up" id="bag2"></i></a></li>
+                                    <li> <a href="#"><i class="fa-solid fa-shuffle" id="bag2"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -304,7 +304,7 @@
                                 <ul>
                                     <li><a href="#"  class="bag"><i class="fa-solid fa-bag-shopping"></i></a></li>
                                     <li><a href="#">+Quick View</a></li>
-                                    <li> <a href="#"><i class="fa-solid fa-arrow-trend-up"></i></a></li>
+                                    <li> <a href="#"><i class="fa-solid fa-shuffle"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -322,7 +322,7 @@
                                 <ul>
                                     <li><a href="#"  class="bag"><i class="fa-solid fa-bag-shopping"></i></a></li>
                                     <li><a href="#">+Quick View</a></li>
-                                    <li> <a href="#"><i class="fa-solid fa-arrow-trend-up"></i></a></li>
+                                    <li> <a href="#"><i class="fa-solid fa-shuffle"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -436,7 +436,7 @@
                 <div class="shipping">
                     <div class="shipping-img">
                         <div class="icon-shipping">
-                            <img src="images/shipping-img1.webp" alt="" height="100%" width="100%">
+                            <img src="images/shipping-img1.webp" alt="" height="80%" width="70%">
                         </div>
                         <div class="text-shipping">
                             <h5 style="font-size: 2.5lvh;">FREE SHIPPING</h5>
@@ -446,7 +446,7 @@
                     </div>
                     <div class="shipping-img">
                         <div class="icon-shipping">
-                            <img src="images/shipping-img2.webp" alt="" height="100%" width="100%">
+                            <img src="images/shipping-img2.webp" alt="" height="80%" width="70%">
                         </div>
                         <div class="text-shipping">
                             <h5 style="font-size: 2.5lvh;">DELIVERY ON TIME</h5>
@@ -455,7 +455,7 @@
                     </div>
                     <div class="shipping-img">
                         <div class="icon-shipping">
-                            <img src="images/shipping-img1.webp" alt="" height="100%" width="100%">
+                            <img src="images/shipping-img1.webp" alt="" height="80%" width="70%">
                         </div>
                         <div class="text-shipping">
                             <h5 style="font-size: 2.5lvh;">SECURE PAYMENT</h5>
