--- a/TASKS/shopping-cart2.html
+++ b/TASKS/shopping-cart2.html
@@ -10,11 +10,10 @@
             padding: 0;
             box-sizing: border-box;
         }
-        .main{
-            width: 250px;
-            height: 350px;
+        .card-detail{
+            width: 100%;
+            height: 400px;
             border: 1px solid black;
-            margin: 123px auto;
            
         }
         .img{
@@ -116,7 +115,7 @@
     </style>
 </head>
 <body>
-    <div class="main">
+    <div class="card-detail">
   <div class="img">
     <div class="white-box"></div>
     <span class="pro-new-top">New</span>
