--- a/PROJECTS/portfolio-project/flex-media/index.html
+++ b/PROJECTS/portfolio-project/flex-media/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
+    
 </head>
 <body>
     <div class="banner">
@@ -254,7 +255,7 @@
                         <p>MINS</p>
                     </div>
                     <div class="second tm">
-                        <b>55</b>
+                        <b id="count">55</b>
                         <p>SECS</p>    
                     </div>
                 </div>
@@ -544,5 +545,7 @@
         </div>
         <!-- banner-9 end -->
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
