--- a/PROJECT/portfolio-project/flex-media/index.html
+++ b/PROJECT/portfolio-project/flex-media/index.html
@@ -42,6 +42,7 @@
                     
                 </div>
         </div>
+         <!-- header top end -->
         <!-- header middle start -->
         <div class="header-middle">
             <div class="logo">
@@ -117,7 +118,7 @@
         </div>
             
         <!-- header bottom end -->
-        <!-- slider image start -->
+        <!-- slider image banner-2 start -->
         <div class="banner-2">
                 <div class="shop-now">
                 <span style="color: #e7ab3c;">BAG,KIDS</span>
@@ -130,7 +131,7 @@
 
                 </div>
         </div>
-        <!-- slider image end -->
+        <!-- slider image banner-2 end -->
         <!-- categories banner-3 start -->
         <div class="banner-3">
                 <div class="men img">
