--- a/PROJECT/portfolio-project/grid-media/index.html
+++ b/PROJECT/portfolio-project/grid-media/index.html
@@ -224,7 +224,7 @@
             </div>
         </div>
         <!-- banner-4 end.... -->
-        <!-- .banner-5 start.... -->
+        <!-- banner-5 start.... -->
         <div class="banner-5">
             <div class="content">
                 <h2>Up To 50% Off</h2>
