--- a/PROJECT/portfolio-project/index.html
+++ b/PROJECT/portfolio-project/index.html
@@ -45,7 +45,7 @@
         <div class="home-sci">
           <a href="#"><i class="fa-brands fa-facebook"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/Priyanshi-Vadadoriya"><i class="fa-brands fa-github"></i></a>
           <a href="#"><i class="fa-brands fa-linkedin-in"></i></a> 
         </div>
         
@@ -308,16 +308,16 @@
     <footer id="contact">
     
       <ul class="icon">
-        <li><a href="">
+        <li><a href="#">
           <div class="share-icon"><i class="fa-brands fa-facebook-f"></i></div>
         </a></li>
-        <li><a href="">
+        <li><a href="https://github.com/Priyanshi-Vadadoriya">
           <div class="share-icon"><i class="fa-brands fa-github"></i></div>
         </a></li>
-        <li><a href="">
+        <li><a href="#">
           <div class="share-icon"><i class="fa-brands fa-square-instagram"></i></div>
         </a></li>
-        <li><a href="">
+        <li><a href="#">
           <div class="share-icon"><i class="fa-brands fa-linkedin"></i></div>
         </a></li>
     </ul>
