--- a/PROJECT/portfolio-project/index.html
+++ b/PROJECT/portfolio-project/index.html
@@ -236,7 +236,7 @@
             <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
             <div class="text">
               <h3>Address</h3>
-              <p>C.G.Road,Navrangpura<br>Ahmedabad<br>380009</p>
+              <b>C.G.Road,Navrangpura<br>Ahmedabad<br>380009</b>
             </div>
           </div>
 
@@ -244,7 +244,7 @@
             <div class="icon"><i class="fa-solid fa-phone"></i></div>
             <div class="text">
               <h3>Phone</h3>
-              <p>93279 47022</p>
+              <b>93279 47022</b>
             </div>
           </div>
 
@@ -252,7 +252,7 @@
             <div class="icon"><i class="fa-regular fa-envelope"></i></div>
             <div class="text">
               <h3>Email</h3>
-              <p>priyanshivadadoriya888@gmail.com</p>
+              <b>priyanshivadadoriya888@gmail.com</b>
             </div>
           </div>
         </div>
@@ -321,7 +321,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     
-      <p>Template Designed by <span>Priyanshi Vadadoriya</span></p>
+      <p>Template Designed by <span>Priyanshi Vadadoriya.</span></p>
     </footer>
     <!-- Footer section end -->
 
