--- a/PROJECT/portfolio-project/grid-media/index.html
+++ b/PROJECT/portfolio-project/grid-media/index.html
@@ -334,7 +334,7 @@
                         <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light Forth.</p>
                         <span><a href="#">Read More<i class="fa-solid fa-arrow-right"></i></a></span>
                 </div>
-                <div class="news">
+                <div class="news part3">
                     <div class="news-image">
                         <img src="images/blog3.png.webp" alt="" height="100%" width="100%">
                         </div>
