--- a/LAB-WORK/table.html
+++ b/LAB-WORK/table.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1">
+    <!-- <table border="1">
         <tr>
             <td colspan="3">invoice #9876543210</td>
             <td>15 september2020</td>
@@ -55,6 +55,26 @@
             <td colspan="3">grand total</td>
             <td>239.80</td>
         </tr>
+    </table> -->
+   
+    <table border="1">
+       <tr>
+        <td>1</td>
+        <td >1</td>
+        <td >1</td>
+        <td >1</td>
+        
+       </tr>
+       <tr >
+        <td colspan="2">1</td>
+        <td colspan="2">1</td>
+       </tr>
+       <tr>
+        <td>1</td>
+        <td colspan="3">1</td>
+        
+       </tr>
     </table>
+
 </body>
 </html>
